--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.3",
     "validator": "^13.12.0"
   }
