--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "firebase-admin": "^12.7.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.0",
     "sequelize": "^6.37.3",
     "server_techhome": "file:",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "ws": "^8.18.0",
+    "xlsx": "^0.18.5"
   }
 }
