--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.13.0",
     "redis": "^4.7.0",
     "sequelize": "^6.37.3",
+    "socket.io": "^4.8.1",
     "validator": "^13.12.0"
   }
 }
