--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "firebase-admin": "^12.7.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "natural": "^8.0.1",
     "nodemailer": "^6.9.15",
+    "openai": "^4.73.1",
     "pg": "^8.13.0",
     "redis": "^4.7.0",
+    "remove-accents": "^0.5.0",
     "sequelize": "^6.37.3",
     "sequelize-paginate": "^1.1.6",
     "server_techhome": "file:",
