--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,44 +4,58 @@ services:
   app:
     build: .
     ports:
-      - "3000:3000"
+      - '3000:3000'
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    environment:
+      - USERNAMEPG=postgres
+      - PASSWORD=postgres
+      - DATABASE=techhome
+      - DB_HOST=postgres
+      - PORT=5432
     env_file:
       - .env
     volumes:
       - ./:/app
       - /app/node_modules
     networks:
-      - techhome-network
+      - app-network
 
   postgres:
     image: postgres:17-alpine
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 5s
+      timeout: 5s
+      retries: 5
     environment:
-      POSTGRES_DB: techhome
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
-      - techhome-network
+      - app-network
 
   redis:
     image: redis:6-alpine
     restart: always
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis-data:/data
     networks:
-      - techhome-network
+      - app-network
 
 volumes:
   postgres-data:
   redis-data:
 
 networks:
-  techhome-network:
+  app-network:
+    driver: bridge
