--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.1",
     "firebase-admin": "^12.7.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "natural": "^8.0.1",
@@ -33,6 +34,7 @@
     "sequelize-paginate": "^1.1.6",
     "server_techhome": "file:",
     "socket.io": "^4.8.1",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "winston": "^3.17.0"
   }
 }
