--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   app:
     build: .
+    restart: always
     ports:
       - "3000:3000"
     depends_on:
@@ -38,6 +39,30 @@ services:
       - redis-data:/data
     networks:
       - techhome-network
+ 
+  # nginx:
+  #   image: nginx:alpine
+  #   depends_on:
+  #     - app
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf
+  #     - ./letsencrypt:/etc/letsencrypt
+  #     - ./nginx/logs:/var/log/nginx
+  #   networks:
+  #     - techhome-network
+
+  # certbot:
+  #   image: certbot/certbot
+  #   depends_on:
+  #     - nginx
+  #   volumes:
+  #     - ./letsencrypt:/etc/letsencrypt
+  #     - ./certbot/logs:/var/log/letsencrypt
+  #     - ./certbot/www:/var/www/certbot
+  #   entrypoint: /bin/sh -c 'trap exit TERM; while :; do sleep 2073600; done'
 
 volumes:
   postgres-data:
